fix: header/userbar styles - Еко-Мандрівники text, avatar fallback icon, tablet user-block visibility, allow ac.goit.global images

--- a/components/layout/MobileMenu/MobileMenu.module.css
+++ b/components/layout/MobileMenu/MobileMenu.module.css
@@ -111,7 +111,8 @@
   }
 
   .actions {
-    display: none;
+    justify-content: flex-start;
+    margin-top: 32px;
   }
 }
 
